--- a/.github/workflows/TestGitHubActions_BuildDev.yml
+++ b/.github/workflows/TestGitHubActions_BuildDev.yml
@@ -7,7 +7,7 @@ on:
     branches: [refs/heads/main]
   workflow_dispatch:
   workflow_run:
-    workflows: [TestGitHubActions_Build.yml]
+    workflows: ["TestGitHubActions_Build.yml"]
     types:
       - completed
 
