--- a/.github/workflows/TestGitHubActions_Build.yml
+++ b/.github/workflows/TestGitHubActions_Build.yml
@@ -5,6 +5,8 @@ on:
     branches: [refs/heads/main]
   pull_request:
     branches: [refs/heads/main]
+  repository_dispatch:
+    types: trigger-parent-workflow
   workflow_dispatch:
 
 jobs:
