--- a/.github/workflows/TestGitHubActions_Build.yml
+++ b/.github/workflows/TestGitHubActions_Build.yml
@@ -7,7 +7,7 @@ on:
     branches: [refs/heads/main]
   workflow_dispatch:
   workflow_run:
-    workflows: [TestGitHubActions_BuildDev]
+    workflows: [Build_Dev]
     types:
       - completed
 
