--- a/.github/workflows/TestGitHubActions_BuildDev.yml
+++ b/.github/workflows/TestGitHubActions_BuildDev.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [refs/heads/main]
   workflow_dispatch:
+  workflow_run:
+    workflows:
+      - TestGitHubActions_Build
+    types:
+      - completed
 
 jobs:
   build:
