--- a/.github/workflows/TestGitHubActions_Build.yml
+++ b/.github/workflows/TestGitHubActions_Build.yml
@@ -7,7 +7,8 @@ on:
     branches: [refs/heads/main]
   workflow_dispatch:
   workflow_run:
-    workflows: Build_Dev
+    workflows:
+      - Build_Dev
     types:
      - requested
 
