--- a/.github/workflows/Build_NUnitTests1.yml
+++ b/.github/workflows/Build_NUnitTests1.yml
@@ -10,6 +10,9 @@ on:
       - requested
 jobs:
   build:
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
     runs-on: ubuntu-latest
     steps:
      - name: BuildStep_NUnitTests
