--- a/.github/workflows/Build_NUnitTests1.yml
+++ b/.github/workflows/Build_NUnitTests1.yml
@@ -5,6 +5,9 @@ on:
       - refs/heads/main
 jobs:
   build:
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
     runs-on: ubuntu-latest
     steps:
      - name: BuildStep_NUnitTests
