--- a/.github/workflows/Build_NUnitTests1.yml
+++ b/.github/workflows/Build_NUnitTests1.yml
@@ -1,15 +1,12 @@
-name: Build_NUnitTests2
+name: Build_NUnitTests
 on:
   push:
     branches:
       - refs/heads/main
   workflow_dispatch:
 jobs:
-  build:
-    strategy:
-      matrix:
-        configuration: [Debug, Release]
-    runs-on: ubuntu-latest
-    steps:
-     - name: BuildStep_NUnitTests
-       run: echo "test"
+  runs-on: ubuntu-latest
+  steps:
+    - name: BuildStep_NUnitTests
+      uses: Test.ps1
+
