--- a/.github/workflows/Build_NUnitTests1.yml
+++ b/.github/workflows/Build_NUnitTests1.yml
@@ -1,13 +1,15 @@
-name: Build_NUnitTests1
+name: Build_NUnitTests
 on:
   push:
     branches:
       - refs/heads/main
-  workflow_dispatch:
+  workflow_dispatch: {}
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: BuildStep_NUnitTests
-        run: echo "test"
+        run: |-
+          pwsh -Command ./Test.ps1
+
 
