--- a/.github/workflows/Build_NUnitTests1.yml
+++ b/.github/workflows/Build_NUnitTests1.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
       - name: BuildStep_NUnitTests
         run: |-
-          pwsh -Command ./Test.ps1
+          pwsh -Command ./test.ps1
 
 
