--- a/.github/workflows/TestGitHubActions_Build.yml
+++ b/.github/workflows/TestGitHubActions_Build.yml
@@ -1,21 +1,18 @@
-name: Build_NUnitTests2
-
+name: Build_NUnitTests
 on:
   push:
     branches:
       - refs/heads/main
+  workflow_dispatch: {}
   workflow_run:
     workflows:
       - Build_Dev
     types:
       - requested
-
 jobs:
   build:
-    strategy:
-      matrix:
-        configuration: [Debug, Release]
     runs-on: ubuntu-latest
     steps:
-    - name: BuildStep_NUnitTests
-      run: echo "running unit test"
+      - name: BuildStep_NUnitTests
+        run: |-
+          pwsh -Command ./Test.ps1
