--- a/.github/workflows/TestGitHubActions_BuildDev.yml
+++ b/.github/workflows/TestGitHubActions_BuildDev.yml
@@ -32,7 +32,8 @@ jobs:
       id: check_trigger_status
       uses: octokit/request-action@v2.x
       with:
-        route: GET /repos/Ramanarayanan/TestGitHubAction/actions/runs/${{ github.event.workflow.id }}
+        route: GET /repos/:repository/actions/runs/${{ github.event.workflow.id }}
+        repository: ${{ github.event.repository.full_name }}
         
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
