--- a/.github/workflows/TestGitHubActions_BuildDev.yml
+++ b/.github/workflows/TestGitHubActions_BuildDev.yml
@@ -32,9 +32,8 @@ jobs:
       id: check_trigger_status
       uses: octokit/request-action@v2.x
       with:
-        route: GET /repos/:repository/actions/runs/${{ github.event.workflow.id }}
-        repository: ${{ github.event.repository.full_name }}
-        
+        route: GET /repos/Ramanarayanan/TestGithubaction/actions/runs/${{ github.event.workflow.id }}
+               
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Continue Current Workflow on success
