--- a/.github/workflows/TestGitHubActions_BuildDev.yml
+++ b/.github/workflows/TestGitHubActions_BuildDev.yml
@@ -7,7 +7,7 @@ on:
     branches: [refs/heads/main]
   workflow_dispatch:
   workflow_run:
-    workflows: ["Build_NUnitTests"]
+    workflows: [Build_NUnitTests]
     types:
       - completed
   
