--- a/.github/workflows/buildDev2.yml
+++ b/.github/workflows/buildDev2.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   workflow_run:
-    workflows: [Build]
+    workflows: [Build_NUnitTests]
     types: [completed]
 
 jobs:
