--- a/.github/workflows/buildDev2.yml
+++ b/.github/workflows/buildDev2.yml
@@ -4,6 +4,7 @@ name: CI
 
 # Controls when the workflow will run
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: [Build_NUnitTests]
     types: [completed]
