--- a/.github/workflows/retrytrigger.yml
+++ b/.github/workflows/retrytrigger.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows:
-      - triggering_workflow.yml
+      - triggering_workflow
     types:
       - completed
 
