--- a/.github/workflows/retrytrigger.yml
+++ b/.github/workflows/retrytrigger.yml
@@ -45,7 +45,7 @@ jobs:
     steps:
        - name: BuildStep_MetaRunner
          run: |
-          becho "test meta runner"
+             echo "test meta runner"
        
        
 
