--- a/.github/workflows/retry2.yml
+++ b/.github/workflows/retry2.yml
@@ -3,7 +3,7 @@ name: Retry Triggered Workflow
 on:
   workflow_run:
     workflows:
-      - "Parentworkflow.yml"
+      - Parentworkflow
     types:
       - completed
 
