--- a/.github/workflows/TestDispatchWorkflow.yml
+++ b/.github/workflows/TestDispatchWorkflow.yml
@@ -20,7 +20,7 @@ jobs:
               -H "Accept: application/vnd.github.v3+json" \
               "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/dispatches" \
               -d '{"ref":"main"}' | jq -r '.id')
-             echo 'the workflow id is"
+             echo "the workflow id is"
              echo $workflow_run_id
             if [ "$workflow_run_id" != "null" ]; then
               workflow_status=$(curl -s \
