--- a/.github/workflows/TestDispatchWorkflow.yml
+++ b/.github/workflows/TestDispatchWorkflow.yml
@@ -19,7 +19,7 @@ jobs:
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Accept: application/vnd.github.v3+json" \
               "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/dispatches" \
-              -d '{"ref":"main"}' | jq -r '.id')
+              -d '{"ref":"main"}' )
              echo "the workflow id is"
              echo $workflow_run_id
             if [ "$workflow_run_id" != "null" ]; then
