--- a/.github/workflows/TestDispatchWorkflow.yml
+++ b/.github/workflows/TestDispatchWorkflow.yml
@@ -20,6 +20,6 @@ jobs:
               "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/dispatches" \
               -d '{"ref":"main"}' )
              echo "the workflow id is"
-             echo $workflow_run_id
+             echo {{ fromjson($workflow_run_id)}}
            
         
