--- a/.github/workflows/retryverify.yml
+++ b/.github/workflows/retryverify.yml
@@ -19,6 +19,7 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/dispatches" \
             -d '{"ref": "main"}')
+          echo "$response"
           run_id=$(echo "$response" | jq -r '.id')
           echo "Triggered workflow with ID: $run_id"
 
