--- a/.github/workflows/retryverify.yml
+++ b/.github/workflows/retryverify.yml
@@ -30,12 +30,13 @@ jobs:
         run: |
           response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/runs")
+                   echo ${{ fromjson(response}}
           echo "$response" > workflow_runs.json
       - name: Get the latest workflow run
         id: latest_workflow_run
         run: |
           latest_run=$(cat workflow_runs.json | jq 'max_by(.updated_at)')
-          echo {{ fromjson(latest_run}}
+          echo ${{ fromjson(latest_run}}
           echo "$latest_run" > latest_workflow_run.json
 
       - name: Show the latest workflow run
