--- a/.github/workflows/retryverify.yml
+++ b/.github/workflows/retryverify.yml
@@ -31,13 +31,13 @@ jobs:
           response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/runs")
                    echo $response
-          echo "$response" > workflow_runs.json
+          echo $response > workflow_runs.json
       - name: Get the latest workflow run
         id: latest_workflow_run
         run: |
           latest_run=$(cat workflow_runs.json | jq 'max_by(.updated_at)')
           echo $latest_run
-          echo "$latest_run" > latest_workflow_run.json
+          echo $latest_run > latest_workflow_run.json
 
       - name: Show the latest workflow run
         run: cat latest_workflow_run.json
