--- a/.github/workflows/retryverify.yml
+++ b/.github/workflows/retryverify.yml
@@ -30,7 +30,9 @@ jobs:
         run: |
           response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/runs")
-                   echo $response.workflow_runs[0]
+                   echo $response
+                    workflow_runs=$(echo "$response" | jq -r '.workflow_runs')
+                    echo $workflow_runs
           echo $response > workflow_runs.json
       - name: Get the latest workflow run
         id: latest_workflow_run
