--- a/.github/workflows/retryverify.yml
+++ b/.github/workflows/retryverify.yml
@@ -20,7 +20,7 @@ jobs:
             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/dispatches" \
             -d '{"ref": "main"}')
           echo "$response"
-          run_id=$(echo "$response" | jq -r '.id')
+         
           echo "Triggered workflow with ID: $run_id"
 
       - name: Wait for 30 seconds
@@ -32,6 +32,7 @@ jobs:
             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/Parentworkflow.yml/runs")
                    echo $response
                     workflow_runs=$(echo "$response" | jq -r '.workflow_runs')
+                    echo "This is workflow run"
                     echo $workflow_runs
           echo $response > workflow_runs.json
       - name: Get the latest workflow run
